compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_float_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 191
expression: "let x = <<1:8-float>> x"
---
----- SOURCE CODE
let x = <<1:8-float>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:13
  │
1 │ let x = <<1:8-float>> x
  │             ^ Invalid float size

Hint: floats have an exact size of 16/32/64 bits.
See: https://tour.rakun.run/data-types/bit-arrays/
